<resources>
    <string name="app_name">YourOwnPasswordDatabase</string>
    <string name="enter_pass">Enter your password</string>
    <string name="start_new">Or you can start new database</string>
    <string name="browse">Browse</string>
    <string name="find_file">Find your file</string>
    <string name="get_files">Browse files</string>
    <string name="open">Open</string>
    <string name="backup">backup</string>
    <string name="start">Start new</string>
</resources>