<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="1">

    <TextView
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/get_files"
        android:textSize="18sp" />
    <RelativeLayout android:id="@+id/relativeLayout1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">

        <EditText
            android:id="@+id/pathField"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="15dp"
            android:layout_toLeftOf="@+id/pathButton"
            android:ems="10"
            android:hint="@string/find_file"
            android:inputType="textPersonName"></EditText>

        <Button
            android:text="@string/browse"
            android:id="@+id/pathButton"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:layout_alignParentRight="true"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:onClick="onOpen" >
        </Button>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/passField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_pass"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/openButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:text="@string/open"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/checkbox_backup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/openButton"
            android:layout_marginEnd="5dp"
            android:text="@string/backup" />
    </RelativeLayout>

    <TextView
        android:id="@+id/startNew"
        android:text="@string/start_new"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/startNewButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start" />

</LinearLayout>